[package]
name = "owned_ref_cell-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.owned_ref_cell]
path = ".."

[[bin]]
name = "fuzz_basic_borrows"
path = "fuzz_targets/fuzz_basic_borrows.rs"
test = false
doc = false
bench = false
